@@ -1,5 +1,7 @@
 2004-11-04  Vincent Noel  <vnoel@cox.net>
 
+	* calendar.c: Remove a bunch of useless defines.
+
 	* logrtns.c (isLogFile): Use the GnomeVFSResult to check the file
 	permissions instead of calling an extra gnome_vfs_get_file_info.
 	(GetLogSize): remove. Not used anywhere anymore.
